--- a/SortPix/SortPix.csproj
+++ b/SortPix/SortPix.csproj
@@ -62,7 +62,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)"/>
+        <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.50" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0"/>
     </ItemGroup>
 
@@ -88,7 +88,7 @@
     </ItemGroup> 
 
     <ItemGroup>
-      <Folder Include="SortPixPyFiles\Processed_Images\" />
+        <Folder Include="SortPixPyFiles\Processed_Images\" />
     </ItemGroup>
 
 </Project>
